--- a/starter_project/package.json
+++ b/starter_project/package.json
@@ -13,25 +13,30 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "clean-webpack-plugin": "^4.0.0",
     "cors": "^2.8.5",
-    "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^5.6.0",
     "node-fetch": "^3.3.2",
-    "style-loader": "^3.3.4",
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "babel-loader": "^8.3.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.1",
+    "node-sass": "^9.0.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "sass": "^1.72.0",
-    "sass-loader": "^14.1.1",
+    "sass-loader": "^16.0.1",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.90.3",
     "webpack-dev-server": "^5.0.2",
-    "workbox-webpack-plugin": "^7.0.0"
+    "workbox-webpack-plugin": "^7.1.0"
   }
 }
